Organizing Highlight and paginate scripts

--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -12,7 +12,13 @@
    
    {% endblock %}
 </head>
-<body>
+<body 
+   onload="
+      Paginate.createPages(),
+      Highlight.highlightHeader()
+      Highlight.highlightPagination()
+   "
+>
    
    {% include "parts/messages.njk" %}
 
