Sending path to be used on frontend to redirect

--- a/src/app/views/animations/success.njk
+++ b/src/app/views/animations/success.njk
@@ -9,7 +9,7 @@
    <div class="success-lottie"></div>
    <div>
       <p>{{message.message}}  
-         <a href="/admin/{{entity.group}}/{{entity.id}}">
+         <a href="/admin/{{entity.path}}/">
             {{message.subject}}
          </a>
       </p>
