Making animation title dynamic

--- a/src/app/views/animations/done.njk
+++ b/src/app/views/animations/done.njk
@@ -5,7 +5,7 @@
 {% include "parts/admin-header.njk" %}
 
 <div class="container animation-container">
-   <h2>Chef deletado com sucesso</h2>
+   <h2>{{message.title}}</h2>
    <div class="done-lottie"></div>
 </div>
 
