--- a/src/app/views/users/forgot-form.njk
+++ b/src/app/views/users/forgot-form.njk
@@ -10,10 +10,9 @@
       <link rel="stylesheet" href="/styles/message.css">
    </head>
 
-   <body class="container login-container">
+   {% include "parts/messages.njk" %}
 
-      {% include "parts/messages.njk" %}
-
+   <body>
       <div class="container login-container">
          <header>
             <a href="/home/index">
