--- a/src/app/views/chefs/edit.njk
+++ b/src/app/views/chefs/edit.njk
@@ -7,11 +7,16 @@
 <div class="container fields-container">
    <h2>Editar Chef</h2>
 
-   <form class="card" method="POST" action="/admin/chefs?_method=PUT" enctype="multipart/form-data">
+   <form 
+      class="card" 
+      method="POST" 
+      action="/admin/chefs?_method=PUT" 
+      enctype="multipart/form-data"
+   >
       {% include "chefs/fields.njk" %}
 
       <input type="hidden" name="id" value={{chef.id}}>
-      <input type="hidden" name="file_id" value={{file.id}}>
+      <input type="hidden" name="file_id" value={{image.id}}>
       <button class="button" type="submit">Salvar</button>
    </form>
 
